--- a/math154/calculus1_optimization.html
+++ b/math154/calculus1_optimization.html
@@ -32,7 +32,7 @@ $(function () {
     <P><b>Extreme Value Theorem:</b> If f is a continuous function on a closed interval [a,b],
       then f acheives both an absolute maximum and minimum value on [a,b].
     <br><br>
-    <P>There are two important assumptions in this theorem: 1) f is coninuous, 2) the interval is closed.
+    <P>There are two important assumptions in this theorem: 1) f is continuous, 2) the interval is closed.
     <br><br>
     <P>Not meeting either of these assumptions can break the consequence of the theorem,
       namely that f has a max and min value on the interval.
