--- a/math154/calculus1_optimization.html
+++ b/math154/calculus1_optimization.html
@@ -47,28 +47,20 @@ $(function () {
   </div>
 
 
-<!--
+
 
 
 
   <h2>Warmup </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cv">Warmup</button>
     <div id="cv" class="collapse">
+      <P>Find the critical points of the following functions.
       <ol type='A'>
-      <li>If \( z(y) = y^2 \) and \(y(t) = t^3 + 1\), what is \(\frac{dz}{dt}\)? <br><br>
-      <li>What is the Law of Cosines?<br><br>
-      <li>What is the Pythagorean Theorem? <br><br>
-      <li>A boat is drawn close to a dock by pulling in a rope as shown.
-        How is the rate at which the rope is pulled in related to the rate at which the boat approaches the dock?<br>
-        <img src="./boat-dock.png" width=300><br>
-        <ol type='a'>
-          <li>One is a constant multiple of the other.
-          <li>They are equal.
-          <li>It depends on how close the boat is to the dock.
-        </ol>
+      <li>\(\displaystyle f(x) = x^{3/2} - 3x^{5/2} \) on \( (-\infty, \infty) \)
+      <li>\(\displaystyle g(x) = \frac{x^2 -1}{x^2 + 2x -3} \) on [-2,2]
       </ol>
     </div>
--->
+
 <h2>Example - Beam Strength</h2></h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex3">Example</button>
   <div id="gex3" class="collapse">
@@ -172,6 +164,30 @@ def tangent_line(f = input_box(default=x^2*(sqrt(3600-x^2))), x0 = slider(0, 60,
           </details>
       </div>
 
+      <h2>Example - absolute max/min </h2>
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex7">Example</button>
+        <div id="gex7" class="collapse">
+          <P> Find the critical points and absolute maximum/minimum values of \(y(x) = x^{2/3}\) on [-1,8].
+        </div>
+
+        <h2>Example - high school physics class revisited </h2>
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex8">Example</button>
+          <div id="gex8" class="collapse">
+            <P> Consider a ball thrown into the air. Let \(y(t)\) be the vertical position of the ball.
+              The ball starts at a height of 2 meters with a vertical velocity of 10 meters per second.
+              Complete the tasks below.
+              <ol>
+                <li>Explain why the equation \( m y'' = -mg \) governs the dynamics of this situation
+                  where \(m\) and \(g\) are the mass of the ball and the constant acceleration due to
+                  gravity near the surface of the Earth.
+                <li>Antidifferentiate this equation to find \(y(t)\). How many times do you need to do this?
+                  What other information do you need/have?
+                <li>When does the ball hit the ground (\(t_{end})\)?
+                <li>Is there an absolute max and min height of the ball while it is in the air? Why or why not?
+                <li>If there is an absolute max, find it. If not, explain why not.
+                </ol>
+
+          </div>
 
 
 
