--- a/math154/calculus1_increasing_decreasing_concavity.html
+++ b/math154/calculus1_increasing_decreasing_concavity.html
@@ -70,7 +70,7 @@ $(function () {
         </ol>
 
 
-    <details><summary>videoa</summary>
+    <details><summary>extra videos</summary>
 <ul>
     <li><iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_u9m8aghg&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_6fe587lu" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     <li><iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_bxjn3o1k&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_8f55f4ox" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
@@ -81,10 +81,25 @@ $(function () {
 <h2>Second Derivative Test </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex5">Example</button>
   <div id="gex5" class="collapse">
+    <P><b>Second Derivative Test</b> Suppose  \(f′(c)=0,f''\)  is continuous over an interval containing \(c\).
+      Then we have
+      <ul>
+        <li>If  \(f''(c)>0\),  then  \(f\)  has a local minimum at \(c\).
+        <li>If  \(f''(c)<0\),  then  \(f\)  has a local maximum at  \(c\).
+        <li>If  \(f''(c)=0\),  then the test is inconclusive.
+        </ul>
+        <br>
+        <P><b>Examples</b>
+          <ol type='A'>
+            <li>Use the second derivative test to show \(f(x) = \sin(x)\) has a maximum at \(x=\pi/2\).
+            <li>Find critical points and apply the second test to the function \(g(x) = x^{11} - 9x^{10}\).
+            </ol>
+        <details><summary>extra videos</summary>
     <ul>
     <li><iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_zynonxe7&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_l4ytksin" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     <li><iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_jzpiho9n&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_tagbjiaf" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </ul>
+</details>
   </div>
 
 
@@ -119,7 +134,8 @@ water in the cup. The graph of this function is<br>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#eex5">Example</button>
   <div id="eex5" class="collapse">
     <P>For \(b > 0\) the surge function \(f(t) = te^{-bt} \) gives the amount of a
-      drug in the body as a function of time, \(t \geq 0\).
+      drug in the body as a function of time, \(t \geq 0\). Find where this function is increasing, decreasing, and any local/global max and mins.
+      <details><summary>__</summary>____
       <dl>
         <dt>What do we know about \(f\)?</dt>
         <dd>We know \(f(t) \geq 0\) since \(t \geq0 \) and \(e^{-bt} > 0\).</dd>
@@ -137,6 +153,7 @@ water in the cup. The graph of this function is<br>
         <dd>As \(t \to \infty\) we see that \(f(t) \to 0\).<br>
           <img src="./surge_fcn_graph.png" width=350></dd>
         </dl>
+      </details>
 
     </div>
 
