--- a/math154/calculus1_increasing_decreasing_concavity.html
+++ b/math154/calculus1_increasing_decreasing_concavity.html
@@ -92,7 +92,7 @@ $(function () {
         <P><b>Examples</b>
           <ol type='A'>
             <li>Use the second derivative test to show \(f(x) = \sin(x)\) has a maximum at \(x=\pi/2\).
-            <li>Find critical points and apply the second test to the function \(g(x) = x^{11} - 9x^{10}\).
+            <li>Find critical points and apply the second derivative test to the function \(g(x) = x^{11} - 9x^{10}\).
             </ol>
         <details><summary>extra videos</summary>
     <ul>
@@ -125,7 +125,7 @@ water in the cup. The graph of this function is<br>
   <h2>Example - graphical reasoning  </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exgr">Example</button>
     <div id="exgr" class="collapse">
-      <P>Find the intervals where the function f(x) is increasing and decreasing and identify and local maxima and minima based on the graph of f'(x) below.
+      <P>Find the intervals where the function f(x) is increasing and decreasing and identify any local maxima and minima based on the graph of f'(x) below.
         <br>
         <img src="fprimegraph1.png" with=500>
     </div>
