--- a/math154/calculus1_more_optimization.html
+++ b/math154/calculus1_more_optimization.html
@@ -64,6 +64,21 @@ $(function () {
       </details>
     </div>
 
+    <h2>Example - Rectangle in a triangle </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex5o">Example</button>
+  <div id="gex5o" class="collapse">
+    <P> A rectangle is drawn in such a way that one corner is at the origin,
+      one side lies along the x-axis, one side lies along the y-axis, and the corner opposite the origin lies along the line
+      connecting the points (3,0) and (0,2). What are the dimensions of the rectangle that maximize area?<br>
+
+      <br><br>
+      <details>
+            <summary>Video</summary>
+            (Sorry the camera keeps refocusing in the video.)<br>
+      <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_nb05y44r&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_193yxe3n" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+    </details>
+  </div>
+
     <h2>Example - Farmer fence </h2>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex6">Example</button>
       <div id="gex6" class="collapse">
