--- a/math154/dot_cross_product_intro.html
+++ b/math154/dot_cross_product_intro.html
@@ -38,7 +38,7 @@ $(function () {
       <li><img src="./vecaddition.png" width=400><br>
       <li><img src="./unitvec_mc1.png" width=600><br>
       <li><img src="./unitvec_mc2.png" width=600><br>
-      <li>True or False. \(||\vec{v}|| =  |\vec{v_1}| + |\vec{v_2}| + |\vec{v_3}| \) where \(\vec{v} = v_1\vec{i} + v_2\vec{j} + v_3\vec{k} = v_1 \hat{x} + v_2 \hat{y} + v_3 \hat{z}\). Justify your answer. <br>
+      <li>True or False. \(||\vec{v}|| =  |v_1| + |v_2| + |v_3| \) where \(\vec{v} = v_1\vec{i} + v_2\vec{j} + v_3\vec{k} = v_1 \hat{x} + v_2 \hat{y} + v_3 \hat{z}\). Justify your answer. <br>
       <li>True or False. The length of the sum of two vectors is always strictly larger than the sum of the
 lengths of the two vectors. Justify your answer. <br>
       <li>What angle does the vector \( <3,1/2>\) make with the positve \(x\)-axis?
