--- a/math154/calculus1_exp_log_integrals.html
+++ b/math154/calculus1_exp_log_integrals.html
@@ -137,6 +137,6 @@ $(function () {
     </ol>
     </div>
 
-
+<footer style="padding-top:1cm;">Copyright Tyler Skorczewski 2020-2022</footer>
 </body>
 </html>
