--- a/math154/calculus1_indefinite_integrals.html
+++ b/math154/calculus1_indefinite_integrals.html
@@ -134,5 +134,6 @@ $(function () {
   </details>
     </div>
 
+<footer style="padding-top:1cm;">Copyright Tyler Skorczewski 2020-2022</footer>
 </body>
 </html>
