--- a/math154/calc2home.html
+++ b/math154/calc2home.html
@@ -25,6 +25,7 @@ $(function () {
 <h1>Calculus 2 Webpages</h1>
 <ul>
   <li><a href="./calculus2_calc1review.html">calc1 review</a>
+  <li><a href="./calculus2_usubstitution.html">u substitution</a>
   <li><a href="./calculus2_integral_examples.html">integral examples</a>
   <li><a href="./calculus2_arc_length_surface_area_examples.html">arc length and surface area integral examples</a>
   <li><a href="./calculus2_integral_patterns.html">integral_patterns</a>
