--- a/math154/calc2home.html
+++ b/math154/calc2home.html
@@ -46,6 +46,6 @@ $(function () {
   <li><a href="./vvf.html">vvf.html</a>
 </ul>
 
-<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2018-2023</footer>
   </body>
   </HTML>
