--- a/math154/calculus2_usubstitution.html
+++ b/math154/calculus2_usubstitution.html
@@ -29,12 +29,12 @@ $(function () {
 <h2>Motivation</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wu">Motivation</button>
   <div id="wu" class="collapse">
-    <P>Find \(\displaystyle \int \frac{3}{1+9x^2}dx\).
+    <P>Find \(\displaystyle \int \left( 3 + x^2 \right)^2 2x~dx\).
       <br>
-      <details>
+      <!--<details>
         <summary>video</summary>
       <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_kmn0jmps&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_y0375gaf" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
-    </details>
+    </details>-->
   </div>
 
 <h2>Idea</h2>
@@ -55,7 +55,8 @@ $(function () {
 <div id="ex1" class="collapse">
 <P>Find \(\displaystyle \int (2x + 4)\left(x^2 + 4x\right)^5~dx\).<br><br>
 <P>Find \(\displaystyle \int \frac{4}{(4x -3)^2}~dx\).<br><br>
-<P>Find \(\displaystyle \int 3x^2 \cos(x^3)~dx\).
+<P>Find \(\displaystyle \int 3x^2 \cos(x^3)~dx\).<br><br>
+<P>Find \(\displaystyle \int \frac{3}{1 + 9x^2}~dx\).<br><br>  
   <br>
   <details>
     <summary>video</summary>
@@ -154,6 +155,6 @@ $(function () {
 
 
 
-<footer style="padding-top:1cm;">Copyright Tyler Skorczewski 2020-2022</footer>
+<footer style="padding-top:1cm;">Copyright Tyler Skorczewski 2020-2023</footer>
 </body>
 </html>
