--- a/math154/calc2home.html
+++ b/math154/calc2home.html
@@ -26,9 +26,11 @@ $(function () {
 <ul>
   <li><a href="./calculus2_calc1review.html">calc1 review</a>
   <li><a href="./calculus2_usubstitution.html">u substitution</a>
-  <li><a href="./calculus2_integral_examples.html">integral examples</a>
+  <li><a href="./calculus2_integral_examples.html">integral examples (areas, volumes of revolution)</a>
   <li><a href="./calculus2_arc_length_surface_area_examples.html">arc length and surface area integral examples</a>
   <li><a href="./calculus2_integral_patterns.html">integral_patterns</a>
+  <li><a href="./calculus2_work_fluid_forces.html">work and fluid forces</a>
+  <li><a href="./calculus2_centers_of_mass.html">centers of mass</a>
   <li><a href="./calculus2_sequences_and_series.html">sequences and series</a>
   <li><a href="./DEs_calc2.html">DEs_calc2.html</a>
   <li><a href="./dot_cross_product_examples.html">dot_cross_product_examples.html</a>
