--- a/math154/calculus2_sp23_exam2review_ans.html
+++ b/math154/calculus2_sp23_exam2review_ans.html
@@ -78,8 +78,8 @@ the radius of the earth is \(6.37 \times 10^6\) m, and \(G = 6.67 \times 10^{-11
           <li>\(\displaystyle \frac{dy}{dx} = \frac{y^{1/3}}{x^{1/3}} = \frac{-(a^{2/3} - x^{2/3})^{1/2}}{x^{1/3}}\)
         </ul>
       <li>\(\displaystyle L = \int_{x=0}^{a}\sqrt{1 + \left(\frac{-(a^{2/3} - x^{2/3})^{1/2}}{x^{1/3}}\right)^2}~dx\)
-      <li>\(\displaystyle L = \int_{x=0}^{a}\sqrt{\left(\frac{x^{2/3}+a^{2/3}-x^{2/3}}{x^{2/3}}\right)^2}~dx\)
-      <li>\(\displaystyle L = \int_{x=0}^{a}\sqrt{\left(\frac{a^{2/3}}{x^{2/3}}\right)^2}~dx\)
+      <li>\(\displaystyle L = \int_{x=0}^{a}\sqrt{\frac{x^{2/3}+a^{2/3}-x^{2/3}}{x^{2/3}}}~dx\)
+      <li>\(\displaystyle L = \int_{x=0}^{a}\sqrt{\frac{a^{2/3}}{x^{2/3}}}~dx\)
       <li>\(\displaystyle L = \int_{x=0}^{a}\frac{a^{1/3}}{x^{1/3}}~dx\)
       <li>\(\displaystyle L = \frac{3}{2}a\)
       <li>Total length is then \(6a\).
