--- a/math154/calculus3_vvf.html
+++ b/math154/calculus3_vvf.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width:750px; padding-left: 1cm; padding-bottom:10cm" >
+  <body style="width: 800px; padding-left: 1cm" background="bg.jpg">
 
   <h1>Vector valued functions</h1>
 
@@ -56,7 +56,7 @@ $(function () {
     <ol>
       <li> Draw the curve.
       <li> Find \(\displaystyle \frac{d}{dt}\vec{r}(t)\). What does this represent? How is it related to the unit tangent vector?
-      <li> Calculate \(\displaystyle \int r(t)~dt\).
+      <li> Calculate \(\displaystyle \int \vec{r}(t)~dt\).
       <li> If the particle starts out at the origin and travels along this curve, set up an integral that represents the distance traveled in time, \(T\).
     </ol>
  </div>
@@ -175,6 +175,5 @@ def _(v0=slider(1.,50.0,0.1,10.)):
     </div>
 </div>
 
-  <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2021</footer>
 </body>
 </html>
