--- a/math154/calculus3_vvf.html
+++ b/math154/calculus3_vvf.html
@@ -66,7 +66,7 @@ $(function () {
  <h2>Example -  </h2>
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex00">Example</button>
    <div id="ex00" class="collapse">
-     <P>Consider the vector-valued function \(\displaystyle \vec{r}(t) = \begin{bmatrix} \sqrt{2} t \\ e^t \\ e^{-t} \end{bmatrix}\) for \(0 <\leq t \leq 1 \).
+     <P>Consider the vector-valued function \(\displaystyle \vec{r}(t) = \begin{bmatrix} \sqrt{2} t \\ e^t \\ e^{-t} \end{bmatrix}\) for \(0 \leq t \leq 1 \).
      <ol>
        <li> What is \(\displaystyle \int \vec{r}~dt\)?
        <li> How is above different from \(\displaystyle \int_0^1 |\vec{r}|~dt\)?
