--- a/other/quests/scavhunt/yardscavengerhunt.html
+++ b/other/quests/scavhunt/yardscavengerhunt.html
@@ -1,1 +1,46 @@
-s
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Yard Scavenger Hunt</title>
+</head>
+<body>
+    <table>
+        <tr>
+            <th>Found it?</th>
+            <th>Item</th>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item1"></td>
+            <td><img src="./steeringwheel.jpg" alt="Steering wheel" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item2"></td>
+            <td><img src="./rabbit.jpg" alt="Rabbit" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item3"><input type="checkbox" name="item4"><input type="checkbox" name="item5"></td>
+            <td><img src="./bear.jpg" alt="3 bears" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item6"></td>
+            <td><img src="./fairygarden.jpg" alt="Fairy garden" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item7"></td>
+            <td><img src="./globe.jpg" alt="Red globe" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item8"></td>
+            <td><img src="./toads.jpg" alt="Toads" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item9"></td>
+            <td><img src="./turtle.jpg" alt="Turtle" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item10"></td>
+            <td><img src="./pinwheel.jpg" alt="Pinwheel" width=300></td>
+        </tr>
+    </table>
+</body>
+</html>
