--- a/other/quests/scavhunt/yardscavengerhunt.html
+++ b/other/quests/scavhunt/yardscavengerhunt.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <h1>Yard Scavenger Hunt</h1>
-  <P>Below is a list of items around the yard you can try to find. Can you find them all?
+  <P>Below is a list of items around the yard you can try to find. Can you find them all?<br><img src="./qr.png" width=150><br>
 
     <table>
         <tr>
