--- a/other/quests/scavhunt/yardscavengerhunt.html
+++ b/other/quests/scavhunt/yardscavengerhunt.html
@@ -48,6 +48,18 @@
             <td><img src="./fairygarden.jpg" alt="Fairy garden" width=300></td>
         </tr>
         <tr>
+            <td><input type="checkbox" name="item12"></td>
+            <td><img src="./rainbowrock.jpg" alt="Red globe" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item13"></td>
+            <td><img src="./monsterrock.jpg" alt="Red globe" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item14"></td>
+            <td><img src="./bunnyrock.jpg" alt="Red globe" width=300></td>
+        </tr>
+        <tr>
             <td><input type="checkbox" name="item7"></td>
             <td><img src="./globe.jpg" alt="Red globe" width=300></td>
         </tr>
@@ -62,6 +74,10 @@
         <tr>
             <td><input type="checkbox" name="item10"></td>
             <td><img src="./pinwheel.jpg" alt="Pinwheel" width=300></td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="item11"></td>
+            <td><img src="./rocks1.jpg" alt="3 rocks" width=300></td>
         </tr>
     </table>
     <button onclick="checkAllCheckboxes()" width=200>I found everything!</button>
