--- a/Math123/functions_and_lines.html
+++ b/Math123/functions_and_lines.html
@@ -89,11 +89,72 @@ $(function () {
           <ol>
             <li>What are the independent and dependent variables?
             <li>Find the amount of waste in year 6 of the program.
-            <li>When will the wast decline to 3000 tons?
+            <li>When will the waste decline to 3000 tons?
             <li>How much does the waste decline?
             </ol>
-    </body>
+
   </div>
+
+  <h2>Example 4 - cigarettes</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
+    <div id="ex4" class="collapse">
+      <P>The US Department of Health conducted a survey from 1985 to 2008 on the use of cigarettes.
+        Data indicate
+        $$y = -0.47t + 47.1$$
+        for the 18-25 year old cohort, where \(t\) is the years past 1980 and \(y\) is the percentage of smokers.
+      <P>Consider the following questions:
+            <ol>
+              <li>What are the independent and dependent variables?
+              <li>Estimate the percentage of smokers in 2010, 2017, 2027.
+              <li>When is \(y=20\)? What does this mean?
+              <li>Graph the function and describe its shape.
+              <li>Rewrite this equation in point-slope form with \(t_0 = 2\).
+              <li>Rewrite in standard form.
+              <li>Make a plot in Excel showing this relationship.
+              </ol>
+
+    </div>
+
+<h2>Example 5 </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example 5</button>
+  <div id="ex5" class="collapse">
+    <P>What is the equation of the line through the points (5,4) and (10,24)?
+
+  </div>
+
+<h2>Example 6 - books</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
+  <div id="ex6" class="collapse">
+    <P>I have 80 books in my office now and three years ago I had 59. How many will I have 5 years from now?
+
+  </div>
+
+  <h2>Example 7 - more books</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
+    <div id="ex7" class="collapse">
+      <P>Four years ago a colleague had 215 books in his office and also collects about 7 books a year.
+        <ol>
+          <li>Write an equation representing her books.
+          <li>What do you notice about these lines?
+          <li><details><summary>___</summary>
+            What is the line perpendicular to this line?
+          </details>
+          <li><details><summary>___</summary>
+            What do you notice about the line \(5b - 35t = 400\)?
+          </details>
+          </ol>
+
+    </div>
+
+<h2>Example 8 - </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
+  <div id="ex8" class="collapse">
+    <P>How many qualitatively different ways are there to draw two lines?
+
+  </div>
+
+
+
 
 <footer style="padding-top: 3cm;">Copyright 2023 Tyler Skorczewski</footer>
 </body>
