--- a/Math123/math123home.html
+++ b/Math123/math123home.html
@@ -32,6 +32,7 @@
 <ul>
   <li><a href="https://tyler-skorczewski-math.github.io/Math123/percentages.html">Percentages</a>
   <li><a href="https://tyler-skorczewski-math.github.io/Math123/functions_and_lines.html">Functions and lines</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/Math123/break-even.html">Break-even analysis and other applications</a>
   <li>Linear Systems of Equations
   <li><a href="https://tyler-skorczewski-math.github.io/Math123/inequalities.html">Systems of inequalities</a>
   <li><a href="https://tyler-skorczewski-math.github.io/Math123/linearprogramming.html">Linear programming</a>
