--- a/Math123/break-even.html
+++ b/Math123/break-even.html
@@ -40,7 +40,7 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
     <P>A computer manufacturer sells tablets. Its shop has fixed costs of $500 per week.
-    Costs for parts and labor is $649 for each tablet. It sells its tablets for $899 each.
+    Costs for parts and labor is \\$649 for each tablet. It sells its tablets for \\$899 each.
     Assume it sells every tablet it makes, and that it makes \(x\) tablets each week.
       <ol>
         <li>What is the cost function for each week?
