--- a/Math123/linearsystemseqns.html
+++ b/Math123/linearsystemseqns.html
@@ -80,7 +80,7 @@ $(function () {
 <h2>Example 4 - GG part 2</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
   <div id="ex4" class="collapse">
-    <P>What if the Gifts Galore company saw demand for a waffle iron <ins>
+    <P>What if the Gifts Galore company saw demand for a waffle iron is
     $$p = -2.5x + 148,$$
     and the supply is
     $$p = 1.7x  + 43.$$
@@ -112,6 +112,19 @@ $(function () {
   <details><summary>video</summary>
   <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_q67i6znm&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_tg42gy92" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </details>
+  </div>
+
+  <h2>Example 7 - bookstore</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
+  <div id="ex7" class="collapse">
+
+  <P>The bookstore bought a total of 1000 homecoming t-shirts and sweatshirts.
+    T-shirts cost $7.80 and sold for $13.50 each.
+    White sweatshirts cost $16.50 each and sold for $28.00 each.
+    Blue sweatshirts cost $18.00 each and sold for $30.00 each.
+    Total costs at the end of the day were $11,505 and total revenue was $19,600.
+    How many of each item were sold?
+
   </div>
 
   <h2>Example 8 - movie theater </h2>
@@ -149,8 +162,55 @@ $(function () {
       </ol>
   </div>
 
+  <h2>Example 10 - brokerage </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
+  <div id="ex10" class="collapse">
 
+  <P> A brokerage firm has a mutual fund consisting of three stocks, X,Y,Z.
+    On March 1, the closing prices of each were
+    <ul>
+      <li>X: $44,
+      <li>Y: $22,
+      <li>Z: $64.
+      </ul>
+    The mutual fund had a total value of $20,480.
+    Three weeks later these figures were
+      <ul>
+        <li>X: $42,
+        <li>Y: $28,
+        <li>Z: $62,
+        </ul>
+    with the total value at $20,720.
+    Two weeks after that the figures were
+    <ul>
+      <li>X: $42,
+      <li>Y: $30,
+      <li>Z: $60,
+      </ul>
+  with the total value at $20,580.
+  <br><br>
+  <P>If the brokerage firm didn't buy or sell any shares, how many of each stock did they own?
+  </div>
 
+  <h2>Example 11 - car rental company</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example 11</button>
+  <div id="ex11" class="collapse">
+
+  <P>The management of the Stout rent-a-car has allocated $2.25 million to buy a fleet of new cars consisting of compact, mid-size, and full-size cars.
+    Compacts cost $18,000. Mid-size cars cost $27,000, and full-size cost $36,000.
+    They want to buy 100 cars with twice as many compacts as mid-size. How many of each should they buy?
+
+  </div>
+
+  <h2>Example 12 - apartment</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example 12</button>
+  <div id="ex12" class="collapse">
+
+  <P>Imagine you are a real-estate developer planning on building a new apartment complex of 1-2-3 bedroom apartments.
+    A total of 192 units are planned and the number of family apartments (2-3 bedroom) has to equal the number of 1 bedroom units.
+    If the number of 1 bedroom is 3 times the number of 3 bedroom apartments, how many of each type is in the complex?
+
+  </div>
 
 
 <footer style="padding-top: 3cm;">Copyright 2023 Tyler Skorczewski</footer>
