--- a/Math123/linearsystemseqns.html
+++ b/Math123/linearsystemseqns.html
@@ -114,6 +114,16 @@ $(function () {
   </details>
   </div>
 
+  <h2>Basic Examples</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exb">Example</button>
+  <div id="exb" class="collapse">
+
+  <P>Solve the system below
+  $$2x + y + 2z = 1$$
+  $$4x + 3z = –5$$
+  $$5y + 4z = 13$$
+</div>
+
   <h2>Example 7 - bookstore</h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
   <div id="ex7" class="collapse">
