--- a/Math123/linearsystemseqns.html
+++ b/Math123/linearsystemseqns.html
@@ -223,6 +223,30 @@ $(function () {
 
   </div>
 
+  <h2>Example 13 - line of best fit by hand</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example 13</button>
+  <div id="ex13" class="collapse">
+
+  <P>Find the line of best fit that describes the data given in the table below.
+    <style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+
+      <thead><tr><td>x</td><td>y</td></tr></thead>
+      <tr><td>4</td><td>8</td></tr>
+      <tr><td>5</td><td>7.5</td></tr>
+      <tr><td>7</td><td>6</td></tr>
+      <tr><td>9</td><td>3.5</td></tr>
+    </table>
+
+  </div>
+
 
 <footer style="padding-top: 3cm;">Copyright 2023 Tyler Skorczewski</footer>
 </body>
